# opengl-codespace

./: CMakeLists.txt  PC01_CV_Badillo_Castillo  PC01_CV_Badillo_Castillo.cpp  README.md  ejercicio1.cpp  ejercicio2.cpp  main  main.cpp  main2  main2.cpp
.devcontainer/: devcontainer.json
Tareas/: Tarea2.cpp
Tests/: Test1.cpp  Test3.cpp  Test4.cpp  Test6.cpp  Test7.cpp
